--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,7 +5,13 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
-		<title>sonjajosipovic.se - Blog CMS</title>
+		<title>sonjajosipovic.se</title>
+		<meta
+			name="description"
+			content="Lär känna Sonja Josipovic, hennes bocker och ta del av hennes tankar." />
+		<meta
+			name="author"
+			content="Sonja Josipovic" />
 		<!-- Include the script that enables Netlify Identity on this page. -->
 		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
