--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
 		<script
 			type="module"
 			src="/src/main.js"></script>
+		<script
+			src="https://static.elfsight.com/platform/platform.js"
+			async></script>
 	</body>
 </html>
